# opentrons-document-mcp-server

./: .gitignore  README.md  manifest.json  package-lock.json  package.json  pnpm-lock.yaml
docs/: Makefile  README.md  general.md  pyproject.toml
docs/basic_api/: adapting_ot2_flex.md  deck_slots.md  liquid_class_definitions.md  liquid_classes.md  moving_labware.md  new_advanced_running.md  new_atomic_commands.md  new_complex_commands.md  new_examples.md  new_labware.md  new_modules.md  new_pipette.md  new_protocol_api.md  robot_position.md  runtime_parameters.md  tutorial.md
docs/basic_commands/: liquids.md  pipette_tips.md  utilities.md
docs/complex_commands/: order_operations.md  parameters.md  sources_destinations.md
docs/dev_setup/: devenv.md
docs/example_protocols/: dilution_tutorial.py  dilution_tutorial_flex.py  dilution_tutorial_multi.py  dilution_tutorial_multi_flex.py
docs/flex-manual/: additional-documentation.md  index.md  introduction.md  open-source-software.md  support-contact-information.md
docs/hepa-uv/: hardware-controls.md  hepa-specifications.md  index.md
docs/manual/: OpentronsFlexManual.md  OpentronsOT2Manual.md  ProtocolDesignerManual.md
docs/modules/: absorbance_plate_reader.md  heater_shaker.md  magnetic_block.md  magnetic_module.md  multiple_same_type.md  temperature_module.md  thermocycler.md
docs/parameters/: choosing.md  defining.md  style.md  use_case_cherrypicking.md  use_case_dry_run.md  use_case_sample_count.md  using_values.md
docs/pd-manual/: index.md  mix-steps.md  overview.md  robot-instruments.md  (+2 more)
src/: index.ts
(+57 files in other folders)
