[project]
name = "docs"
version = "0.1.0"
description = "Opentrons documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-parent-css-plugin",
]

[tool.uv.sources]
mkdocs-parent-css-plugin = { path = "mkdocs-parent-css-plugin", editable = true }
